kubernetes/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dms-comm-deployment
  namespace: default
  labels:
    app: dms-comm
spec:
  replicas: 2
  selector:
    matchLabels:
      app: dms-comm
  template:
    metadata:
      labels:
        app: dms-comm
    spec:
      containers:
        - name: dms-bulletin-container
          image: kyoona/dms-bulletin:6f295d6bdc363743fc9598021b886674a663ed14
          ports:
            - containerPort: 8081
          resources:
            requests:
              cpu: 300m
            limits:
              cpu: 1
        - name: dms-chatting-container
          image: kyoona/dms-chatting:6f295d6bdc363743fc9598021b886674a663ed14
          ports:
            - containerPort: 8082
          resources:
            requests:
              cpu: 300m
            limits:
              cpu: 1
        - name: dms-gateway-container
          image: kyoona/dms-gateway:6f295d6bdc363743fc9598021b886674a663ed14
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 600m
            limits:
              cpu: 1
