kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: comm-ingress
  namespace: default
  annotations:
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb  # IngressClass로 'alb'를 사용
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: dms-comm-service
                port:
                  number: 80
          - path: /members
            pathType: Prefix
            backend:
              service:
                name: dms-comm-service
                port:
                  number: 80
